--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,26 @@ dependencies:
 
   flutter:
     sdk: flutter
+
+   # Annotations for freezed.
+  freezed_annotation: ^2.4.1
+
+  # Defines the annotations used by json_serializable.
+  # To create code for JSON serialization and deserialization.
+  json_annotation: ^4.8.1
+
+  # A wrapper around InheritedWidget to make them easier to use and more reusable.
+  # We use it for state management.
+  provider: ^6.0.5
   
 
 dev_dependencies:
+
+  # To run generator > flutter pub run build_runner build
+  # To watch updates and resolve conflicts > flutter packages pub run build_runner watch --delete-conflicting-outputs
+
+  # Provides a concrete way of generating files using Dart code.
+  build_runner: ^2.4.6
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -46,10 +63,11 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
-
   flutter_test:
     sdk: flutter
 
+  # Code generator for data-classes/unions/pattern-matching/cloning.
+  freezed: ^2.4.5
 
   solid_lints: ^0.0.19
 
